rtg_tests/negative/excluded_channel/go.mod
module example.com/rtgtests/negative/channel

go 1.25
